Corrected bug related to snapshots containing null values